--- a/sitedir/index.html
+++ b/sitedir/index.html
@@ -1,146 +1,140 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="shortcut icon" href="favicon.ico" />
-		<title>
-			Aleph's Website
-		</title>
-		<meta name="title" content="Aleph's Website: Cartoons, animations and more." />
-		<meta property="og:site_name" content="Aleph's Website" />
 
-		<meta name="description" 
+<head>
+	<link rel="shortcut icon" href="favicon.ico" />
+	<title>
+		Aleph's Website
+	</title>
+	<meta name="title" content="Aleph's Website: Cartoons, animations and more." />
+	<meta property="og:site_name" content="Aleph's Website" />
+
+	<meta name="description"
 		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
-		<meta property="og:description" 
+	<meta property="og:description"
 		content="This is Aleph Diallo's website for his works. As a cartoonist and somewhat of a nerd, he has a deep love for creating websites and drawing tons of interesting things. He decided to combine the two together and create a website that he swore to consistently update: Aleph's Website. Nowadays, he's not so sure about the consistent part." />
-		<meta property="og:type" content="website" />
+	<meta property="og:type" content="website" />
 
-		<meta charset="utf-8" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-		<link rel="canonical" href="https://badbunsen.com/" />
+	<link rel="canonical" href="https://badbunsen.com/" />
 
-		<link rel="stylesheet" href="stuff/stylesheets/main.css" />
-	</head>
-	<body>
-	
-        <div id="container">
-            <div id="headerArea">
-                <div id="header" style="height: 64px;"></div>
-                <nav id="navbar" style="margin-bottom: 0px;">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                        <li><a href="#">Link</a></li>
-                    </ul>
-                </nav>
-            </div>
+	<link rel="stylesheet" href="stuff/stylesheets/main.css" />
+</head>
 
-            <div id="flex">
-                <aside id="leftSidebar" style="margin-right: 0px;">
-                    <h2>Updates</h2>
-                    <div class="box">
-                        <p>I have recently updated this tool as of August 2022!</p>
-                        <ul style="padding-left:10px;">
-                            <li>Rewrote the JS to generate cleaner code</li>
-                            <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
-                            <li>Added a couple of new features!</li>
-                            <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
-                        </ul>
-                    </div>
-                    <h2>Hi there!</h2>
-                    <h3>Other Tools</h3>
-                    <ul>
-                        <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
-                        </li><li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
-                        <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
-                    </ul>
-                </aside>
-                <main>
-                    <h1>Welcome to my Layout Maker!</h1>
-                    <p><strong>Please read this first!</strong></p>
-                    <p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns above to customize your layout's general features. Click the button to generate your HTML and CSS, and paste it into a file on Neocities.</p>
-                    <p>Then you can replace all of the text with your own. For more customization, the CSS code has comments to explain what each part changes. Please read through the code - even if you have no idea what it means.</p>
-                    <p>If you're feeling up for a challenge, I put together <a href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which goes over the structure of how this layout is built, along with some specific tips on how to edit it in certain ways.</p>
-                    <p>Check the links in the sidebar for more resources to build your own website!</p>
+<body>
 
-                    <p> - Cat Ipsum - </p>
-                    <p>Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on the laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my human fished for me.</p>
+	<div id="container">
+		<div id="headerArea">
+			<!--<div id="header" style="height: 64px;"></div>
+			note to aleph: add it back when you make a good banner-->
+			<nav id="navbar" style="margin-bottom: 0px;">
+				<ul>
+					<li><img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website."
+							height="18"></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</nav>
+		</div>
 
-                    <p>Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered towels.</p>
+		<div id="flex">
+			<aside id="leftSidebar" style="margin-right: 0px;">
+				<h2>Updates</h2>
+				<div class="box">
+					<p>I have recently updated this tool as of August 2022!</p>
+					<ul style="padding-left:10px;">
+						<li>Rewrote the JS to generate cleaner code</li>
+						<li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
+						<li>Added a couple of new features!</li>
+						<li>Old version is still available <a href="old.html" target="_blank">here</a></li>
+					</ul>
+				</div>
+				<h2>Hi there!</h2>
+				<h3>Other Tools</h3>
+				<ul>
+					<li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
+					</li>
+					<li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
+					<li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
+					<li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
+					<li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
+				</ul>
+			</aside>
+			<main>
+				<h1>Welcome to my Layout Maker!</h1>
+				<p><strong>Please read this first!</strong></p>
+				<p>This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns
+					above to customize your layout's general features. Click the button to generate your HTML and CSS,
+					and paste it into a file on Neocities.</p>
+				<p>Then you can replace all of the text with your own. For more customization, the CSS code has comments
+					to explain what each part changes. Please read through the code - even if you have no idea what it
+					means.</p>
+				<p>If you're feeling up for a challenge, I put together <a
+						href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which
+					goes over the structure of how this layout is built, along with some specific tips on how to edit it
+					in certain ways.</p>
+				<p>Check the links in the sidebar for more resources to build your own website!</p>
+
+				<p> - Cat Ipsum - </p>
+				<p>Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on
+					the laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my
+					human fished for me.</p>
+
+				<p>Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot,
+					shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip
+					eat the grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered
+					towels.</p>
 
 
-                </main>
-                <aside id="rightSidebar" style="margin-left: 0px;">
-                    <h2>Updates</h2>
-                    <div class="box">
-                        <p>I have recently updated this tool as of August 2022!</p>
-                        <ul style="padding-left:10px;">
-                            <li>Rewrote the JS to generate cleaner code</li>
-                            <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
-                            <li>Added a couple of new features!</li>
-                            <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
-                        </ul>
-                    </div>
-                    <h2>Hi there!</h2>
-                    <h3>Other Tools</h3>
-                    <ul>
-                        <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a>
-                        </li><li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
-                        <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
-                        <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
-
-                    </ul>
-                </aside>
-            </div>
-            <footer id="footer" style="margin-top: 0px;">
+			</main>
+		</div>
+		<footer id="footer" style="margin-top: 0px;">
 			<p class="copyright">
-				<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website." width="128"><br>
+				<img src="stuff/grafx/sitegrafx/logos/awebsite/wordmark_white.svg" alt="Aleph's Website."
+					height="24"><br>
 				Aleph's Website media contents Copyright &copy; 2022-2025 Aleph Diallo.<br>
 				[berjones] media contents Copyright &copy; 2023-2024 Berayah Jones<br>
 				Site code &copy; Aleph Diallo; Aleph's Website is licensed under the BSD 3-Clause License.<br>
-				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
-				title="DMCA.com Protection Status" 
-				class="dmca-badge">
-					<img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac" 
-					alt="DMCA.com Protection Status" />
-				</a>  
+				<a href="//www.dmca.com/Protection/Status.aspx?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+					title="DMCA.com Protection Status" class="dmca-badge">
+					<img src="https://images.dmca.com/Badges/dmca-badge-w100-5x1-02.png?ID=87c069ad-ed33-495d-8e1e-cc709a0dabac"
+						alt="DMCA.com Protection Status" />
+				</a>
 				<script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js">
 				</script>
 			</p>
-			</footer>
-        </div>
-		<!--hcard follies-->
-		<div style="display: none;">
+		</footer>
+	</div>
+	<!--hcard follies-->
+	<div style="display: none;">
 		<div class="h-card">
-				<!--my persona's pfp-->
-				<img class="u-photo" 
-				src="https://badbunsen.com/jan2025/media/clipart/persona/profile_picture.png" 
+			<!--my persona's pfp-->
+			<img class="u-photo" src="https://badbunsen.com/jan2025/media/clipart/persona/profile_picture.png"
 				alt="An image of my persona">
-				 <!--My name and my website (which you're currently viewing)
+			<!--My name and my website (which you're currently viewing)
 				 -->
-				 <a class="p-name u-url" rel="me"
-				href="https://badbunsen.com/" 
-				>Aleph Diallo</a>
-				<!--little note-->
-				<p class="p-note">Cartoonist with a webpage.</p>
+			<a class="p-name u-url" rel="me" href="https://badbunsen.com/">Aleph Diallo</a>
+			<!--little note-->
+			<p class="p-note">Cartoonist with a webpage.</p>
 		</div>
 		<!--indieauth uses real social media handles to get people to login
 		to their services. this should also be hidden...-->
 		<div class="indieweb-auth">
-				<a href="https://github.com/badbunsen" rel="me">@badbunsen on Github</a>
-				<!--i'm not active on twitter, like, at all, but it's cool to have 
+			<a href="https://github.com/badbunsen" rel="me">@badbunsen on Github</a>
+			<!--i'm not active on twitter, like, at all, but it's cool to have 
 				just in case, i guess-->
-				<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
-				<!--might use youtube someday-->
-				<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
-				<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
+			<a href="https://x.com/badbunsen" rel="me">@badbunsen on Twitter</a>
+			<!--might use youtube someday-->
+			<a href="https://youtube.com/@badbunsen" rel="me">@badbunsen on YouTube</a>
+			<a href="mailto:aleph@badbunsen.com" rel="me">aleph@badbunsen.com</a>
 		</div>
-		</div>
-	</body>
+	</div>
+</body>
+
 </html>
